# xpartition

./: .codecov.yaml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  rechunk.py  setup.cfg  test_rechunk.py  test_xpartition.py  tox.ini  xpartition.py
.github/workflows/: pre-commit.yaml  tests.yaml
ci/: environment.yaml  requirements.txt
xpartition/: __init__.py  test_xpartition.py  xarray_utils.py  xpartition.py
