[build-system]
requires = ["setuptools>=38.4", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "xpartition"
authors = [{name = "Spencer Clark", email = "spencerkclark@gmail.com"}]
license = {file = "LICENSE"}
description = "Tool for writing large xarray datasets to zarr stores with independent processes"
classifiers = [
	"Development Status :: 2 - Pre-Alpha",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Intended Audience :: Science/Research",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Topic :: Scientific/Engineering"
]
requires-python = ">=3.11"
dependencies = ["xarray>=2024.10.0", "dask[array]>=2.9.0", "zarr"]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Repository = "https://github.com/spencerkclark/xpartition.git"

[tool.flake8]
ignore = [	
    "E203",
	"E402",
	"E501",
	"E731",
	"W503"
]
exclude = [
    ".eggs",
    "doc",
    "__init__.py"
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "xpartition.xpartition.__version__"}
