[metadata]
name = xpartition
author = Spencer K. Clark
author_email = spencerkclark@gmail.com
license = MIT License
description = Tool for writing large xarray datasets to zarr stores with independent processes
url = https://github.com/spencerkclark/xpartition
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
py_modules = xpartition
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.6
install_requires =
    xarray >= 0.16.2
    dask[array] >= 2.9.0
    setuptools >= 38.4  # For pkg_resources
    dataclasses; python_version == "3.6"
    zarr
setup_requires =
    setuptools >= 38.4
    setuptools_scm

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
exclude=
    .eggs
    doc
