[metadata]
name = xpartition
version = attr: xpartition.__version__
author = Spencer K. Clark
author_email = spencerkclark@gmail.com
license = MIT License
description = Tool for writing large xarray datasets to zarr stores with independent processes
long_description = 
	xpartition provides a way to split N-dimensional dask-backed arrays into
	a user-specified number of blocks of dask chunks.  This can be useful for
	assigning work to batch jobs on HPC systems or Dataflow workers in an
	Apache Beam pipeline in the cloud.
long_description_content_type = text/plain
url = https://github.com/spencerkclark/xpartition
classifiers = 
	Development Status :: 2 - Pre-Alpha
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Intended Audience :: Science/Research
	Programming Language :: Python
	Programming Language :: Python :: 3
	Topic :: Scientific/Engineering

[options]
packages = xpartition
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.6
install_requires = 
	xarray >= 2024.10.0
	dask[array] >= 2.9.0
	setuptools >= 38.4  # For pkg_resources
	dataclasses; python_version == "3.6"
	zarr
setup_requires = 
	setuptools >= 38.4
	setuptools_scm

[flake8]
ignore = 
	E203
	E402
	E501
	E731
	W503
exclude = 
	.eggs
	doc
	__init__.py
